# Plant-Sim

./: LICENSE  README.md  genome.json  main.py  prof.prof  prof2.prof  prof3.prof  pyproject.toml
plantsim/: app.py  cell_types.py  cell_update.py  config.py  coord.py  genome.py  main.py  plant.py  plant_cell.py  plant_sim.py
