[tool.poetry]
name = "plantsim"
version = "0.1.0"
description = ""
authors = ["mtavasszy <matt.tavasszy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
numpy = "^1.26.3"
pillow = "^10.2.0"
pygame = "^2.5.2"
pydantic = "^2.5.3"
opencv-python = "^4.9.0.80"
pydantic-numpy = "^4.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
